converting asset management away from glitch

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lucy's Reading Responses</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://cdn.glitch.global/85701763-95d4-4e0a-9eaa-56b66f30513b/icons8-stern-50.png?v=1739546940963" />
+    <link rel="icon" href="/icons/icons8-stern-50.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;500;600;700;800&display=swap" rel="stylesheet">  </head>
